--- a/css/style.css
+++ b/css/style.css
@@ -1572,62 +1572,82 @@ iframe {
 }
 @media (max-width: 1200px) {
   .footer-wrapper {
-    grid-template-columns: repeat(3, minmax(-webkit-min-content, 1fr));
-    grid-template-columns: repeat(3, minmax(min-content, 1fr));
+    grid-template-columns: repeat(7, minmax(-webkit-min-content, 1fr));
+    grid-template-columns: repeat(7, minmax(min-content, 1fr));
     grid-template-rows: repeat(11, minmax(40px, -webkit-min-content));
     grid-template-rows: repeat(11, minmax(40px, min-content));
   }
   .footer__social {
-    grid-column: span 2;
+    grid-column: 3/6;
     grid-row: 1/3;
-    align-items: center;
+    align-self: center;
   }
   .footer__categories {
-    grid-column: 1;
+    grid-column: 1/3;
     grid-row: 4/5;
   }
   .footer__additional {
-    grid-column: 2;
+    grid-column: 3/6;
     grid-row: 4/5;
+    justify-self: center;
   }
   .footer__legal {
-    grid-column: 3;
+    grid-column: 6/8;
     grid-row: 4/5;
   }
   .footer__contacts {
+    grid-column: 1/4;
     grid-row: 6/7;
   }
   .footer__message {
-    grid-column: span 2;
-    grid-row: 8/9;
+    grid-column: 4/8;
+    grid-row: 6/7;
   }
   .footer__disclaimer {
     grid-row: 10;
-    grid-column: 1/3;
+    grid-column: 3/6;
   }
   .footer__disclaimer-list {
     justify-content: flex-start;
   }
   .footer__cards {
     grid-row: 10;
-    grid-column: 3;
+    grid-column: 7;
     justify-self: end;
   }
 }
 @media (max-width: 992px) {
+  .footer-wrapper {
+    grid-template-rows: repeat(10, minmax(40px, -webkit-min-content));
+    grid-template-rows: repeat(10, minmax(40px, min-content));
+  }
   .footer__logo {
     width: 104px;
   }
+  .footer__social {
+    grid-column: 3/7;
+  }
   .footer__contacts {
-    grid-column: span 3;
+    grid-column: 1/7;
+    grid-row: 6/7;
+  }
+  .footer__message {
+    grid-column: 1/7;
+    grid-row: 8/9;
+  }
+  .footer__disclaimer {
+    grid-column: 2/6;
   }
 }
 @media (max-width: 768px) {
   .footer__title {
     font-size: 14px;
   }
-  .footer__message {
-    grid-column: span 3;
+  .footer__contacts {
+    grid-column: 1/8;
+  }
+  .footer__disclaimer {
+    grid-column: 1/6;
   }
 }
 @media (max-width: 576px) {
@@ -1654,6 +1674,7 @@ iframe {
   .footer__additional {
     grid-column: 1;
     grid-row: 4;
+    justify-self: self-start;
   }
   .footer__legal {
     grid-column: 1;
