--- a/sass/_media-footer.sass
+++ b/sass/_media-footer.sass
@@ -1,48 +1,62 @@
 @media ( max-width: 1200px)
 	.footer
 		&-wrapper
-			grid-template-columns: repeat(3, minmax(min-content, 1fr))
+			grid-template-columns: repeat(7, minmax(min-content, 1fr))
 			grid-template-rows: repeat(11, minmax(40px, min-content))
 		&__social
-			grid-column: span 2
+			grid-column: 3 / 6
 			grid-row: 1 / 3
-			align-items: center
+			align-self: center
 		&__categories
-			grid-column: 1
+			grid-column: 1 / 3
 			grid-row: 4 / 5
 		&__additional
-			grid-column: 2
+			grid-column: 3 / 6
 			grid-row: 4 / 5
+			justify-self: center
 		&__legal
-			grid-column: 3
+			grid-column: 6 / 8
 			grid-row: 4 / 5
 		&__contacts
+			grid-column: 1 / 4
 			grid-row: 6 / 7
 		&__message
-			grid-column: span 2
-			grid-row: 8 / 9
+			grid-column: 4 / 8
+			grid-row: 6/7
 		&__disclaimer
 			grid-row: 10
-			grid-column: 1/3
+			grid-column: 3 / 6
 			&-list
 				justify-content: flex-start
 		&__cards
 			grid-row: 10
-			grid-column: 3
+			grid-column: 7
 			justify-self: end
 
 @media ( max-width: 992px)
 	.footer
+		&-wrapper
+			grid-template-rows: repeat(10, minmax(40px, min-content))
 		&__logo
 			width: 104px
+		&__social
+			grid-column: 3 / 7
 		&__contacts
-			grid-column: span 3
+			grid-column: 1 / 7
+			grid-row: 6 / 7
+		&__message
+			grid-column: 1 / 7
+			grid-row: 8 / 9
+		&__disclaimer
+			grid-column: 2 / 6
 @media ( max-width: 768px)
 	.footer
 		&__title
 			font-size: 14px
-		&__message
-			grid-column: span 3
+		&__contacts
+			grid-column: 1 / 8
+		&__disclaimer
+			grid-column: 1 / 6
 @media ( max-width: 576px)
 	.footer
 		&-wrapper
@@ -63,6 +77,7 @@
 		&__additional
 			grid-column: 1
 			grid-row: 4
+			justify-self: self-start
 		&__legal
 			grid-column: 1
 			grid-row: 5
