--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,6 @@ template {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0;
 }
 .menu__link {
   color: inherit;
@@ -1390,7 +1389,6 @@ iframe {
 
   .user {
     flex-direction: column;
-    margin-bottom: 20px;
   }
   .user__avatar {
     margin-bottom: 10px;
@@ -1400,14 +1398,12 @@ iframe {
     color: #fff;
   }
 
-  .search {
-    margin-bottom: 20px;
-  }
-
   .menu {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 400px;
+    justify-content: space-between;
   }
   .menu-mobile--visible {
     display: block;
@@ -1419,9 +1415,7 @@ iframe {
   }
   .menu__list {
     flex-direction: column;
-  }
-  .menu__item {
-    margin-bottom: 20px;
+    height: 210px;
   }
 
   .hamburger {
@@ -1433,6 +1427,7 @@ iframe {
     justify-content: space-between;
     border: none;
     background-color: #fff;
+    cursor: pointer;
   }
   .hamburger:focus {
     outline: 0;
@@ -1546,6 +1541,11 @@ iframe {
   }
   .activities-blocks__type:nth-child(3) {
     margin-bottom: 20px;
+  }
+}
+@media (max-width: 360px) {
+  .search__input {
+    width: 250px;
   }
 }
 @media (max-width: 320px) {
