--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -76,18 +76,17 @@
 				display: none
 	.user
 		flex-direction: column
-		margin-bottom: 20px
 		&__avatar
 			margin-bottom: 10px
 		&__name
 			margin-left: 0
 			color: $white
-	.search
-		margin-bottom: 20px
 	.menu
 		display: flex
 		flex-direction: column
 		align-items: center
+		min-height: 400px
+		justify-content: space-between
 		&-mobile
 			&--visible
 				display: block
@@ -98,8 +97,7 @@
 				bottom: 0
 		&__list
 			flex-direction: column
-		&__item
-			margin-bottom: 20px
+			height: 210px
 	.hamburger
 		width: 16px
 		height: 11px
@@ -109,6 +107,7 @@
 		justify-content: space-between
 		border: none
 		background-color: $white
+		cursor: pointer
 		&:focus
 			outline: 0
 		&__line
@@ -191,6 +190,11 @@
 				height: 255px
 				&:nth-child(3)
 					margin-bottom: 20px
+@media ( max-width: 360px)
+	.header
+	.search
+		&__input
+			width: 250px
 @media ( max-width: 320px)
 	.subscribe
 		width: 220px
